<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Plante</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="login">Sign in</string>
    <string name="createnewaccount">Create new Account</string>
    <string name="forgetpassword">Forget password?</string>
    <string name="allreadyhaveaccount">Allready an User?</string>
    <string name="signup">Sign up</string>
    <string name="privacy">Privacy</string>
    <string name="policy">Policy</string>
    <string name="rules">Rules</string>
    <string name="remberpassword">Or Remember that?</string>
    <string name="recover">Recover</string>
    <string name="recoverquote">Hey, Forget it please put you email here...</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="editprofile">Edit Profile</string>
    <string name="activitylog">Activity Log</string>
    <string name="notifiication">Notification</string>
    <string name="treatment">Treatment</string>
    <string name="tfe_ic_camera_error">Hello</string>
    <string name="name">Name</string>
    <string name="usertype">User type</string>
    <string name="phone">Mobile no</string>
    <string name="submit">Submit</string>
    <string name="weather">Weather</string>
    <string name="mapview">Map</string>
    <string name="diseaseditect">Ditect Disease</string>
    <string name="findpeople">Find People</string>
    <string name="Communities">Communities</string>
    <string name="rv_directions_route_card_name">Restaurant #%1$d</string>
    <string name="rv_directions_route_available_table_info">%1$d tables available</string>
    <string name="toast_instruction">Tap on cards below</string>
    <string name="access_tokens">pk.eyJ1IjoiY2hhbW9kZGltYW50aGEiLCJhIjoiY2s4ODd2aXBlMDBtNTNwbGFjaTZlNmdxcyJ9.C7OGLqee8h6HsDEAXOJaeg</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="language_support">Language Support</string>
    <string name="show">Show</string>
    <string name="logout">Log out!</string>
    <string name="diseases">Diseases</string>
    <string name="stores">Stores</string>
    <string name="fertilizers">Fertilizers</string>
    <string name="community">Community</string>
    <string name="askfromcommunity">Ask from community</string>
    <string name="advertising">Advertising</string>
    <string name="helpdesk">Help Desk</string>
    <string name="menu">Menu</string>
    <string name="active_user">Active users</string>
    <string name="chat">Chat</string>
    <string name="group_chat">Group chat</string>
    <string name="forum">Forum</string>
    <string name="camera_message">Take picture that cover a leaf of plant. \n  Do you need to watch tutorial please click this!</string>
    <string name="ask_your_problem">Ask your problem</string>
    <string name="caption">Caption</string>
    <string name="enter_caption_here">Enter caption here</string>
    <string name="enter_question_here">Enter question here</string>
    <string name="what_you_know">what you have to know</string>
    <string name="publish">Publish</string>
    <string name="group_name">Group name</string>
    <string name="group_description">Group description</string>
    <string name="create">Create</string>
    <string name="edit_group">Edit group</string>
    <string name="leave_group">Leave group</string>
    <string name="add_participants">Add participants</string>
    <string name="participant_count">Participants</string>
    <string name="treatment_for_this">Treatment for this</string>
    <string name="fertilizer_for_this">Fertilizers for this</string>
    <string name="your_connection">Your Connections</string>
    <string name="addfertilizer">Add Fertilizer</string>
    <string name="diseaseis">Disease is</string>
    <string name="listoffertilizer">List of Fertilizer</string>
    <string name="search">Search</string>
    <string name="addtreatment">Add Treatments</string>
    <string name="putatreatmenthere">Put a treatment here</string>
    <string name="howtodoit">How to do it</string>
    <string name="treatmentfor">Treatment for</string>
    <string name="adddisease">Add disease</string>
    <string name="placesyoucanbuy">Places you can buy</string>
    <string name="putanameofdiseasehere">Pua a name of disease here</string>
    <string name="putadescriptionofdiseasehere">Pua a description here</string>
    <string name="description">Disease description</string>
    <string name="howitlooklike">How look like</string>
    <string name="add">Add</string>
    <string name="type">Type</string>
    <string name="city">City</string>
    <string name="contact">Contact</string>
    <string name="addshop">Add Shop</string>
    <string name="disease_list">Disease</string>
    <string name="good_morning">Good Morning!</string>
    <string name="good_evening">Good Evening!</string>
    <string name="add_members">Add Members</string>
    <string name="rule1">This app requires storage, and camera permisions from your device.</string>
    <string name="rule2">User can work with community to solve theri problems.</string>
    <string name="rule3">User can detect infected disease of plants from this application.</string>
    <string name="rule4">User can get details of treatments, fertilizes for the disease.</string>
    <string name="rule5">User can get details about fertilizes, shops and diseases from this app.</string>
    <string name="rule6">All user data protected by our developers from malicious things.</string>

    <string name="sinhala_setting">සැකසුම</string>
    <string name="sinhala_notification">දැනුම්දීම</string>
    <string name="sinhala_activity_log">ක්‍රියාකාරකම් ලොගය</string>
    <string name="sinhala_stores">වෙළඳසැල්</string>
    <string name="sinhala_fertilizer">පොහොර</string>
    <string name="sinhala_disease">රෝග</string>
    <string name="sinhala_community">ප්‍රජාව</string>
    <string name="sinhala_askfromcommunity">ප්‍රජාවෙන් විමසන්න</string>
    <string name="sinhala_advertising">ප්‍රචාරණය</string>
    <string name="sinhala_help">උදව්</string>
    <string name="sinhala_add">එකතු කරන්න</string>
    <string name="sinhala_log_out">ඉවත් වන්න</string>
    <string name="sinhala_login">ඇතුල් වන්න</string>
    <string name="sinhala_name">නම</string>
    <string name="sinhala_type">වර්ගය</string>
    <string name="sinhala_image">රූප</string>
    <string name="sinhala_treatments">ප්රතිකාර</string>
    <string name="sinhala_from_added">එකතු කිරීමෙන්</string>
    <string name="sinhala_language_support">භාෂා සහාය</string>
    <string name="sinhala_show">පෙන්වන්න</string>
    <string name="sinhala_menu">මෙනු</string>
    <string name="sinhala_active_user">සක්‍රීය පරිශීලකයින්</string>
    <string name="sinhala_chat">කතාබස්</string>
    <string name="sinhala_group_chat">කණ්ඩායම් කතාබස්</string>
    <string name="sinhala_forum">සංසද</string>
    <string name="sinhala_camera_message">කරුණාකර පත්‍රයක සම්පූර්ණ \n ප්‍රමාණයේ රූපයක් ගන්න</string>
    <string name="sinhala_ask_your_problem">ඔබේ ගැටලුව විමසන්න</string>
    <string name="sinhala_caption">මාතෘකාව</string>
    <string name="sinhala_put_a_caption_here">මෙහි මාතෘකාව ඇතුලත් කරන්න</string>
    <string name="sinhala_enter_caption_here">ප්‍රශ්නය මෙහි ඇතුළත් කරන්න</string>
    <string name="sihnala_what_you_need_to_know">ඔබ දැනගත යුතු දේ</string>
    <string name="sinhala_publish">ප්‍රකාශ කරන්න</string>
    <string name="sinhala_group_name">කණ්ඩායම් නම</string>
    <string name="sinhala_group_description">කණ්ඩායම් විස්තරය</string>
    <string name="sinhala_create">සාදන්න</string>
    <string name="sinhala_edit_group">සංස්කරණය කරන්න</string>
    <string name="sinhala_leave_group">ඉවත්ව යන්න</string>
    <string name="sinhala_add_participants">සහභාගිවන්නන්</string>
    <string name="sinhala_participant_count">සහභාගිවන්නන් ගණන් කරයි</string>
    <string name="sinhala_treatment_for_this">මේ සඳහා ප්‍රතිකාර</string>
    <string name="sinhala_fertilizer_for_this">මේ සඳහා පොහොර</string>
    <string name="sinhala_findpeople">පරිශීලකයින් සොයා ගන්න</string>
    <string name="sinhala_your_connection">ඔබගේ සම්බන්ධතා</string>
    <string name="sinhala_addfertilizer">පොහොර එකතු කරන්න</string>
    <string name="sinhala_diseaseis">රෝගය</string>
    <string name="sinhala_listoffertilizer">පොහොර ලැයිස්තුව</string>
    <string name="sinhala_search">සෙවීම</string>
    <string name="sinhala_addtreatment">ප්රතිකාර එකතු කරන්න</string>
    <string name="sinhala_putatreatmenthere">ප්‍රතිකාර මෙහි ලියන්න</string>
    <string name="sinhala_howtodoit">එය කරන්නේ කෙසේද?</string>
    <string name="sinhala_treatmentfor">මේ සඳහා ප්‍රතිකාර</string>
    <string name="sinhala_adddisease">රෝග එකතු කරන්න</string>
    <string name="sinhala_placesyoucanbuy">ඔබට මිලදී ගත හැකි ස්ථාන</string>
    <string name="sinhala_profile">පැතිකඩ</string>
    <string name="sinhala_putanameofdiseasehere">රෝගයක නම මෙහි තබන්න</string>
    <string name="sinhala_putadescriptionofdiseasehere">විස්තරයක් මෙහි දමන්න</string>
    <string name="sinhala_description">විස්තර</string>
    <string name="sinhala_howitlooklike">එය පෙනෙන්නේ කෙසේද</string>
    <string name="sinhala_city">නගරය</string>
    <string name="sinhala_contact">අමතන්න</string>
    <string name="sinhala_addshop">සාප්පුවක් එක් කරන්න</string>
    <string name="sinhala_disease_list">රෝග</string>
    <string name="sinhala_add_members">සාමාජිකයින් එකතු කරන්න</string>

</resources>