<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Activities.Signup">

    <TextView
        android:id="@+id/txv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Be a community member"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_sign_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/txv_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_edit_text_border"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_sign_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_sign_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_edit_text_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_sign_password_con"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_sign_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_edit_text_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_sign_password_con"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button_border"
        android:text="@string/signup"
        android:textSize="26dp" />


    <TextView
        android:id="@+id/txv_alreadyuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signup"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/allreadyhaveaccount"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="16dp" />

</RelativeLayout>